# sx126x-rs

./: Cargo.toml
src/: lib.rs
src/op/: calib.rs  init.rs  modulation.rs  packet.rs  rxtx.rs  status.rs
src/sx/: mod.rs  slave_select.rs
