[package]
name = "sx126x"
version = "0.1.1"
authors = ["Henk Dieter Oordt <henkdieter@oordt.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A driver for the SX126X Family of LoRa modems"
keywords = ["embedded", "lora", "sx126x", "lorawan"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
repository = "https://github.com/tweedegolf/sx126x-rs"
exclude = [
    "/examples",
    "/.cargo",
    "/target",
    "/openocd.cfg",
    "/openocd.gdb",
    "/memory.x",
    "/.gitignore",
]

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }

[dev-dependencies]
nb = "0.1.2"
panic-semihosting = "0.5.3"

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true
